2009-10-29  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=30932
        <rdar://problem/7350269>
        
        REGRESSION: Crash when turning on Private Browsing on site with flash.
        
        Null check setValue.
        
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView privateBrowsingModeDidChange]):

2009-10-29  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Kevin Decker.

        Refactor some duplicate plug-in clean up code into shared functions.

        * Plugins/WebPluginController.mm:
        (-[WebPluginController stopOnePlugin:]): New, stop a plug-in.
        (-[WebPluginController destroyOnePlugin:]): New, destroy plug-in.
        (-[WebPluginController stopAllPlugins]): Call stopOnePlugin.
        (-[WebPluginController destroyPlugin:]): Call stopOnePlugin and destroyOnePlugin.
        (-[WebPluginController destroyAllPlugins]): Call destroyOnePlugin.

2009-10-28  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7303145> 
        Can't exit full screen mode or restart movie after pressing command -R.

        * WebView/WebVideoFullscreenController.mm:
        (-[WebVideoFullscreenController _requestExit]): 
            New, call media element's exitFullscreen method.
        (-[WebVideoFullscreenController requestExitFullscreenWithAnimation:]): 
            Call mediaElement->exitFullscreen() after a delay as it turns around and calls
            WebVideoFullscreenController:exitFullscreen.

        * WebView/WebVideoFullscreenHUDWindowController.h:
        * WebView/WebVideoFullscreenHUDWindowController.mm:
        (-[WebVideoFullscreenHUDWindow resignFirstResponder]):
            New, don't give up responder status.
        (-[WebVideoFullscreenHUDWindow performKeyEquivalent:]):
            New, block all command key events.